# octosync

./: CHANGELOG  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: build.yaml  check.yaml  ci.yaml  test.yaml
src/: main.rs  octosync.rs  public_keys.rs  store.rs  user_manager.rs
