[package]
name = "octosync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
derivative = { version = "2.2" }
directories = { version = "6" }
env_logger = { version = "0.11" }
futures = "0.3.32"
indexmap = { version = "2.13.0", features = ["serde"] }
jsonwebtoken = { version = "10", features = ["rsa"] }
libc = { version = "0.2" }
log = { version = "0.4" }
nix = { version = "0.30", features = ["fs", "user"] }
octocrab = { version = "0.49", features = ["stream"] }
reqwest = { version = "0.13" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.48.0", features = [
    "fs",
    "macros",
    "process",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1", features = ["io-util"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }


[dev-dependencies]
tempfile = "3.26.0"
