[package]
name = "octosync"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/jonasehrlich/octosync"

[dependencies]
anyhow = "1"
async-stream = { version = "0.3" }
bon = { version = "3.9" }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
derivative = { version = "2.2" }
directories = { version = "6" }
fs2 = { version = "0.4" }
futures = "0.3.32"
indexmap = { version = "2.13.0", features = ["serde"] }
jsonwebtoken = { version = "10", features = ["rsa"] }
nix = { version = "0.30", features = ["fs", "user", "signal"] }
octocrab = { version = "0.49", default-features = false, features = [
    "default-client",
    "follow-redirect",
    "jwt-rust-crypto",
    "retry",
    "rustls",
    "rustls-aws-lc-rs",
    "stream",
    "timeout",
    "tracing",
] }
reqwest = { version = "0.13" }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.48.0", features = [
    "fs",
    "macros",
    "process",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
zbus = { version = "4", default-features = false, features = ["tokio"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.18" }

[dev-dependencies]
tempfile = "3.26.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
